# qt5-template

./: CMakeLists.txt  README.md  build.bat  build.sh
include/: window.hpp
src/: main.cpp
